# DNS-Switcher

./: .gitattributes  .gitignore  Launch DNS Switcher.bat  Launch DNS Switcher.command  README.md  dns_switcher.pyw  dns_switcher_app.py  pyproject.toml
.github/workflows/: release.yml
installers/: install-macos.sh  install-windows.ps1
packaging/windows/: dns_switcher.iss
scripts/: build_release.py
